--- a/styles/main.css
+++ b/styles/main.css
@@ -14,228 +14,559 @@
  * limitations under the License.
  */
 
-html, body {
-	font-family: 'Roboto', 'Helvetica', sans-serif;
+.react-container {
+	display: inline-block;
 }
-.demo-avatar {
-	width: 48px;
-	height: 48px;
-	border-radius: 24px;
+
+/**
+ * Copyright 2015 Google Inc. All Rights Reserved.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *      http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+
+@font-face {
+	font-family: "And Black";
+	src: url("myfont-webfont.eot?#iefix") format('embedded-opentype'),
+	url("fonts/and_black.woff") format('woff'),
+	url("fonts/and_black.ttf") format('truetype');
 }
-.demo-layout .demo-header .mdl-textfield {
-	padding-top: 27px;
+
+body {
+	margin: 0;
 }
-.demo-layout .mdl-layout__header .mdl-layout__drawer-button {
-	color: rgba(0, 0, 0, 0.54);
+
+/* Disable ugly boxes around images in IE10 */
+a img{
+	border: 0px;
 }
-.mdl-layout__drawer .avatar {
-	margin-bottom: 16px;
+
+::-moz-selection {
+	background-color: #6ab344;
+	color: #fff;
 }
-.demo-drawer {
-	border: none;
+
+::selection {
+	background-color: #6ab344;
+	color: #fff;
 }
-/* iOS Safari specific workaround */
-.demo-drawer .mdl-menu__container {
-	z-index: -1;
+
+.android-search-box .mdl-textfield__input {
+	color: rgba(0, 0, 0, 0.87);
 }
-.demo-drawer .demo-navigation {
-	z-index: -2;
+
+.android-header .mdl-menu__container {
+	z-index: 50;
+	margin: 0 !important;
 }
-/* END iOS Safari specific workaround */
-.demo-drawer .mdl-menu .mdl-menu__item {
-	display: -webkit-box;
-	display: -webkit-flex;
-	display: -ms-flexbox;
-	display: flex;
-	-webkit-box-align: center;
-	-webkit-align-items: center;
-	-ms-flex-align: center;
-	align-items: center;
+
+
+.mdl-textfield--expandable {
+	width: auto;
 }
-.demo-drawer-header {
-	box-sizing: border-box;
-	display: -webkit-box;
-	display: -webkit-flex;
-	display: -ms-flexbox;
-	display: flex;
-	-webkit-box-orient: vertical;
-	-webkit-box-direction: normal;
-	-webkit-flex-direction: column;
-	-ms-flex-direction: column;
-	flex-direction: column;
+
+.android-fab {
+	position: absolute;
+	right: 20%;
+	bottom: -26px;
+	z-index: 3;
+	background: #64ffda !important;
+	color: black !important;
+}
+
+.android-mobile-title {
+	display: none !important;
+}
+
+
+.android-logo-image {
+	height: 28px;
+	width: 140px;
+}
+
+
+.android-header {
+	overflow: visible;
+	background-color: white;
+}
+
+.android-header .material-icons {
+	color: #767777 !important;
+}
+
+.android-header .mdl-layout__drawer-button {
+	background: transparent;
+	color: #767777;
+}
+
+.android-header .mdl-navigation__link {
+	color: #757575;
+	font-weight: 700;
+	font-size: 14px;
+}
+
+.android-navigation-container {
+	/* Simple hack to make the overflow happen to the left instead... */
+	direction: rtl;
+	-webkit-box-ordinal-group: 2;
+	-webkit-order: 1;
+	-ms-flex-order: 1;
+	order: 1;
+	width: 500px;
+	-webkit-transition: opacity 0.2s cubic-bezier(0.4, 0, 0.2, 1),
+	width 0.2s cubic-bezier(0.4, 0, 0.2, 1);
+	transition: opacity 0.2s cubic-bezier(0.4, 0, 0.2, 1),
+	width 0.2s cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.android-navigation {
+	/* ... and now make sure the content is actually LTR */
+	direction: ltr;
 	-webkit-box-pack: end;
 	-webkit-justify-content: flex-end;
 	-ms-flex-pack: end;
 	justify-content: flex-end;
-	padding: 16px;
-	height: 151px;
+	width: 800px;
 }
-.demo-avatar-dropdown {
-	display: -webkit-box;
-	display: -webkit-flex;
-	display: -ms-flexbox;
-	display: flex;
+
+.android-search-box.is-focused ~ .android-navigation-container {
+	opacity: 0;
+	width: 100px;
+}
+
+
+.android-navigation .mdl-navigation__link {
+	display: inline-block;
+	height: 60px;
+	line-height: 68px;
+	background-color: transparent !important;
+	border-bottom: 4px solid transparent;
+}
+
+.android-navigation .mdl-navigation__link:hover {
+	border-bottom: 4px solid #8bc34a;
+}
+
+.android-search-box {
+	-webkit-box-ordinal-group: 3;
+	-webkit-order: 2;
+	-ms-flex-order: 2;
+	order: 2;
+	margin-left: 16px;
+	margin-right: 16px;
+}
+
+.android-more-button {
+	-webkit-box-ordinal-group: 4;
+	-webkit-order: 3;
+	-ms-flex-order: 3;
+	order: 3;
+}
+
+
+.android-drawer {
+	border-right: none;
+}
+
+.android-drawer-separator {
+	height: 1px;
+	background-color: #dcdcdc;
+	margin: 8px 0;
+}
+
+.android-drawer .mdl-navigation__link.mdl-navigation__link {
+	font-size: 14px;
+	color: #757575;
+}
+
+.android-drawer span.mdl-navigation__link.mdl-navigation__link {
+	color: #8bc34a;
+}
+
+.android-drawer .mdl-layout-title {
 	position: relative;
-	-webkit-box-orient: horizontal;
-	-webkit-box-direction: normal;
-	-webkit-flex-direction: row;
-	-ms-flex-direction: row;
-	flex-direction: row;
-	-webkit-box-align: center;
-	-webkit-align-items: center;
-	-ms-flex-align: center;
-	align-items: center;
+	background: #6ab344;
+	height: 160px;
+}
+
+.android-drawer .android-logo-image {
+	position: absolute;
+	bottom: 16px;
+}
+
+.android-be-together-section {
+	position: relative;
+	height: 800px;
+	width: auto;
+	background-color: #f3f3f3;
+	background: url('images/arlington.png') center 30% no-repeat;
+	background-size: cover;
+}
+
+.android-font {
+	font-family: 'And Black', 'Helvetica', 'Arial', sans-serif;
+	line-height: 1;
+	color: #767777;
+	font-weight: 300;
+}
+
+.android-slogan {
+	font-size: 60px;
+	padding-top: 160px;
+}
+
+.android-sub-slogan {
+	font-size: 21px;
+	padding-top: 24px;
+}
+
+.android-create-character {
+	font-size: 21px;
+	padding-top: 400px;
+}
+
+.android-create-character a {
+	text-decoration: none;
+	color: #767777;
+	font-weight: 300;
+}
+
+.android-screen-section {
+	position: relative;
+	padding-top: 60px;
+	padding-bottom: 80px;
+}
+
+.android-screens {
+	text-align: right;
 	width: 100%;
+	white-space: nowrap;
+	overflow-x: auto;
 }
 
-.demo-navigation {
-	-webkit-box-flex: 1;
-	-webkit-flex-grow: 1;
-	-ms-flex-positive: 1;
-	flex-grow: 1;
-}
-.demo-layout .demo-navigation .mdl-navigation__link {
-	display: -webkit-box !important;
-	display: -webkit-flex !important;
-	display: -ms-flexbox !important;
-	display: flex !important;
-	-webkit-box-orient: horizontal;
-	-webkit-box-direction: normal;
-	-webkit-flex-direction: row;
-	-ms-flex-direction: row;
-	flex-direction: row;
-	-webkit-box-align: center;
-	-webkit-align-items: center;
-	-ms-flex-align: center;
-	align-items: center;
-	color: rgba(255, 255, 255, 0.56);
-	font-weight: 500;
-}
-.demo-layout .demo-navigation .mdl-navigation__link:hover {
-	background-color: #00BCD4;
-	color: #37474F;
-}
-.demo-navigation .mdl-navigation__link .material-icons {
-	font-size: 24px;
-	color: rgba(255, 255, 255, 0.56);
-	margin-right: 32px;
+.android-screen {
+	text-align: center;
 }
 
-.demo-content {
-	max-width: 1080px;
+.android-screen .android-link {
+	margin-top: 16px;
+	display: block;
+	z-index: 2;
 }
 
-.demo-charts {
-	-webkit-box-align: center;
-	-webkit-align-items: center;
-	-ms-flex-align: center;
-	align-items: center;
-}
-.demo-chart:nth-child(1) {
-	color: #ACEC00;
-}
-.demo-chart:nth-child(2) {
-	color: #00BBD6;
-}
-.demo-chart:nth-child(3) {
-	color: #BA65C9;
-}
-.demo-chart:nth-child(4) {
-	color: #EF3C79;
-}
-.demo-graphs {
-	padding: 16px 32px;
-	display: -webkit-box;
-	display: -webkit-flex;
-	display: -ms-flexbox;
-	display: flex;
-	-webkit-box-orient: vertical;
-	-webkit-box-direction: normal;
-	-webkit-flex-direction: column;
-	-ms-flex-direction: column;
-	flex-direction: column;
-	-webkit-box-align: stretch;
-	-webkit-align-items: stretch;
-	-ms-flex-align: stretch;
-	align-items: stretch;
-}
-/* TODO: Find a proper solution to have the graphs
- * not float around outside their container in IE10/11.
- * Using a browserhacks.com solution for now.
- */
-_:-ms-input-placeholder, :root .demo-graphs {
-	min-height: 664px;
-}
-_:-ms-input-placeholder, :root .demo-graph {
-	max-height: 300px;
-}
-/* TODO end */
-.demo-graph:nth-child(1) {
-	color: #00b9d8;
-}
-.demo-graph:nth-child(2) {
-	color: #d9006e;
-}
-
-.demo-cards {
-	-webkit-box-align: start;
-	-webkit-align-items: flex-start;
-	-ms-flex-align: start;
-	align-items: flex-start;
-	-webkit-align-content: flex-start;
-	-ms-flex-line-pack: start;
-	align-content: flex-start;
-}
-.demo-cards .demo-separator {
-	height: 32px;
-}
-.demo-cards .mdl-card__title.mdl-card__title {
-	color: white;
-	font-size: 24px;
-	font-weight: 400;
-}
-.demo-cards ul {
-	padding: 0;
-}
-.demo-cards h3 {
-	font-size: 1em;
-}
-.demo-updates .mdl-card__title {
-	min-height: 200px;
-	background-image: url('images/dog.png');
-	background-position: 90% 100%;
-	background-repeat: no-repeat;
-}
-.demo-cards .mdl-card__actions a {
-	color: #00BCD4;
+.android-image-link {
 	text-decoration: none;
 }
 
-.demo-options h3 {
-	margin: 0;
+.android-wear {
+	display: inline-block;
+	width: 160px;
+	margin-right: 32px;
 }
-.demo-options .mdl-checkbox__box-outline {
-	border-color: rgba(255, 255, 255, 0.89);
+
+.android-wear .android-screen-image {
+	width: 40%;
+	z-index: 1;
 }
-.demo-options ul {
-	margin: 0;
-	list-style-type: none;
+
+
+.android-phone {
+	display: inline-block;
+	width: 64px;
+	margin-right: 48px;
 }
-.demo-options li {
-	margin: 4px 0;
+
+.android-phone .android-screen-image {
+	width: 100%;
+	z-index: 1;
 }
-.demo-options .material-icons {
-	color: rgba(255, 255, 255, 0.89);
+
+
+.android-tablet {
+	display: inline-block;
+	width: 110px;
+	margin-right: 64px;
 }
-.demo-options .mdl-card__actions {
-	height: 64px;
-	display: -webkit-box;
-	display: -webkit-flex;
-	display: -ms-flexbox;
-	display: flex;
-	box-sizing: border-box;
-	-webkit-box-align: center;
-	-webkit-align-items: center;
-	-ms-flex-align: center;
-	align-items: center;
+
+.android-tablet .android-screen-image {
+	width: 100%;
+	z-index: 1;
+}
+
+.android-tablet .android-link {
+	display: block;
+	z-index: 2;
+}
+
+
+.android-tv {
+	display: inline-block;
+	width: 300px;
+	margin-right: 80px;
+}
+
+.android-tv .android-screen-image {
+	width: 100%;
+	z-index: 1;
+}
+
+
+.android-auto {
+	display: inline-block;
+	width: 300px;
+	overflow: hidden;
+}
+
+.android-auto .android-screen-image {
+	display: block;
+	height: 300px;
+	z-index: 1;
+}
+
+
+.android-wear-section {
+	position: relative;
+	background: url('images/wear.png') center top no-repeat;
+	background-size: cover;
+	height: 800px;
+}
+
+.android-wear-band {
+	position: absolute;
+	bottom: 0;
+	width: 100%;
+	text-align: center;
+	background-color: #37474f;
+}
+
+.android-wear-band-text {
+	max-width: 800px;
+	margin-left: 25%;
+	padding: 24px;
+	text-align: left;
+	color: white;
+}
+
+.android-wear-band-text p {
+	padding-top: 8px;
+}
+
+.android-link {
+	text-decoration: none;
+	color: #8bc34a !important;
+}
+
+.android-link:hover {
+	color: #7cb342 !important;
+}
+
+.android-link .material-icons {
+	position: relative;
+	top: 6px;
+}
+
+.android-alt-link {
+	text-decoration: none;
+	color: #64ffda !important;
+	font-size: 16px;
+}
+
+.android-alt-link:hover {
+	color: #00bfa5 !important;
+}
+
+.android-alt-link .material-icons {
+	position: relative;
+	top: 6px;
+}
+
+.android-customized-section {
+	text-align: center;
+}
+
+.android-customized-section-text {
+	max-width: 500px;
+	margin-left: auto;
+	margin-right: auto;
+	padding: 80px 16px 0 16px;
+}
+
+.android-customized-section-text p {
+	padding-top: 16px;
+}
+
+.android-customized-section-image {
+	background: url('images/devices.jpg') center top no-repeat;
+	background-size: cover;
+	height: 400px;
+}
+
+.android-more-section {
+	padding: 80px 0;
+	max-width: 1044px;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+.android-more-section .android-section-title {
+	margin-left: 12px;
+	padding-bottom: 24px;
+}
+
+.android-card-container {
+}
+
+.android-card-container .mdl-card__media {
+	overflow: hidden;
+	background: transparent;
+}
+
+.android-card-container .mdl-card__media img {
+	width: 100%;
+}
+
+.android-card-container .mdl-card__title {
+	background: transparent;
+	height: auto;
+}
+
+.android-card-container .mdl-card__title-text {
+	color: black;
+	height: auto;
+}
+
+.android-card-container .mdl-card__supporting-text {
+	height: auto;
+	color: black;
+	padding-bottom: 48px;
+}
+
+.android-card-container .mdl-card__actions {
+	position: absolute;
+	bottom: 0;
+}
+
+.android-card-container .mdl-card__actions a {
+	border-top: none;
+	line-height: 32px;
+	font-size: 16px;
+}
+
+.android-footer {
+	background-color: #fafafa;
+	position: relative;
+}
+
+.android-footer a:hover {
+	color: #8bc34a;
+}
+
+.android-footer .mdl-mega-footer--top-section::after {
+	border-bottom: none;
+}
+
+.android-footer .mdl-mega-footer--middle-section::after {
+	border-bottom: none;
+}
+
+.android-footer .mdl-mega-footer--bottom-section {
+	position: relative;
+}
+
+.android-footer .mdl-mega-footer--bottom-section a {
+	margin-right: 2em;
+}
+
+.android-footer .mdl-mega-footer--right-section a .material-icons {
+	position: relative;
+	top: 6px;
+}
+
+
+.android-link-menu:hover {
+	cursor: pointer;
+}
+
+
+/**** Mobile layout ****/
+@media (max-width: 900px) {
+	.android-navigation-container {
+		display: none;
+	}
+
+	.android-title {
+		display: none !important;
+	}
+
+	.android-mobile-title {
+		display: block !important;
+		position: absolute;
+		left: calc(50% - 70px);
+		top: 12px;
+		-webkit-transition: opacity 0.2s cubic-bezier(0.4, 0, 0.2, 1);
+		transition: opacity 0.2s cubic-bezier(0.4, 0, 0.2, 1);
+	}
+
+	.android-search-box.is-focused ~ .android-mobile-title {
+		opacity: 0;
+	}
+
+	.android-more-button {
+		display: none;
+	}
+
+	.android-search-box.is-focused {
+		width: calc(100% - 48px);
+	}
+
+	.android-search-box .mdl-textfield__expandable-holder {
+		width: 100%;
+	}
+
+	.android-be-together-section {
+		height: 350px;
+	}
+
+	.android-slogan {
+		font-size: 26px;
+		margin: 0 16px;
+		padding-top: 24px;
+	}
+
+	.android-sub-slogan {
+		font-size: 16px;
+		margin: 0 16px;
+		padding-top: 8px;
+	}
+
+	.android-create-character {
+		padding-top: 200px;
+		font-size: 16px;
+	}
+
+	.android-create-character img {
+		height: 12px;
+	}
+
+	.android-fab {
+		display: none;
+	}
+
+	.android-wear-band-text {
+		margin-left: 0;
+		padding: 16px;
+	}
+
+	.android-footer .mdl-mega-footer--bottom-section {
+		display: none;
+	}
 }
